--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
 <body id="arriba" class="container-fluid">
     <!-- Contenedor React -->
     <div id="root"></div>
-    <script type="module" src="./src/main.jsx"></script>
+    
+
+    <script type="module" src="/src/main.jsx"></script>
+    
+
 </body>
 </html>
