--- a/index.html
+++ b/index.html
@@ -35,15 +35,28 @@
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="/img/01-favicon/2a.ico" type="image/x-icon" />
+
+
+    <!-- Google Analytics Script (opcional) -->
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=TU_ID_DE_ANALYTICS"></script>
+
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+      gtag('config', 'TU_ID_DE_ANALYTICS');
+    </script> -->
 </head>
 
-<body id="arriba" class="container-fluid">
-    <!-- Contenedor React -->
-    <div id="root"></div>
-    
+<body class="container-fluid">
 
-    <script type="module" src="/src/main.jsx"></script>
-    
+  <!-- Contenedor Bootstrap -->
+
+  <!---------------Enlace a REACT ---------------------->
+  <div id="root"></div>
+  <script type="module" src="./src/main.jsx"></script>
 
 </body>
 </html>
